<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/representatives_layout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_search"
                style="@style/header"
                android:text="@string/search_representative"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_search" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                style="@style/primary_button"
                android:text="@string/search_button"
                android:contentDescription="@string/desc_button_find_representatives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                style="@style/primary_button"
                android:text="@string/use_my_location_button"
                android:contentDescription="@string/desc_button_use_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representatives_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_form_layout">

            <TextView
                android:id="@+id/header_representatives"
                style="@style/header"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representatives_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_representatives"
                android:layout_width="match_parent"
                android:layout_height="@dimen/match_constraints"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_representatives" />

            <TextView
                android:id="@+id/error_msg_placeholder_representatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="@string/error_loading_representatives"
                app:errorMessage="@{viewModel.status}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar_representatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:apiStatus="@{viewModel.status}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>