<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_normal"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ballot_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/launch_logo_desc"
            app:layout_constraintBottom_toTopOf="@+id/elections_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ballot_logo" />

        <Button
            android:id="@+id/elections_button"
            style="@style/primary_button"
            android:text="Upcoming Elections"
            android:contentDescription="@string/desc_button_elections"
            app:layout_constraintBottom_toTopOf="@+id/representatives_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/representatives_button"
            style="@style/primary_button"
            android:text="Find My Representatives"
            android:contentDescription="@string/desc_button_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>